# LMS-based-self-index

./: CMakeLists.txt  README.md  fix_bug.cpp  main.cpp
include/: common.h  grammar.hpp  grammar_build.hpp  lc_gram_algo.hpp  lc_parsers.hpp
include/cdt/: macros.h
include/lpg/: dfuds_tree.hpp  grammar_tree.hpp  grid.hpp  lpg_build.hpp  lpg_index.hpp  utils.hpp
lib/: LMS_induction.cpp  grammar_build.cpp  lc_gram_algo.cpp
sdsl-files/: bp_support_sada.hpp  wt_int.hpp
tests/: sample_file.rand_pat_100_10  sample_file.txt
